force-app/main/default/objects/External_Case_Status_Mapping__mdt/External_Case_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>External Case Status Mapping</label>
    <pluralLabel>External Case Status Mappings</pluralLabel>
</CustomObject>