force-app/main/default/objects/External_Case_Status_Mapping__mdt/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <label>Case Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>