force-app/main/default/objects/External_Case_Status_Mapping__mdt/fields/Customer_Message__c.field-meta.xml
<CustomField>
    <fullName>Customer_Message__c</fullName>
    <label>Customer Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>