force-app/main/default/objects/External_Case_Status_Mapping__mdt/fields/Internal_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Description__c</fullName>
    <description>To Store Internal Description</description>
    <label>Internal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>