force-app/main/default/objects/External_Case_Status_Mapping__mdt/fields/Is_Created_In_SF__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_In_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify if external status is created in Salesforce.</description>
    <label>Is Created In SF ?</label>
    <type>Checkbox</type>
</CustomField>