force-app/main/default/objects/External_Case_Status_Mapping__mdt/fields/PEGA_Dispute_Status__c.field-meta.xml
<CustomField>
    <fullName>PEGA_Dispute_Status__c</fullName>
    <description>To Store PEGA Dispute Status</description>
    <label>PEGA Dispute Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>