force-app/main/default/objects/External_Case_Status_Mapping__mdt/fields/PEGA_Investigation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>PEGA_Investigation_Outcome__c</fullName>
    <description>To store PEGA Investigation Outcome</description>
    <label>PEGA Investigation Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>